--- a/medicine/public/css/customize.css
+++ b/medicine/public/css/customize.css
@@ -90,6 +90,29 @@ table strong{
     margin-right: 10px;
 }
 
+.mb15 {
+    margin-bottom: 15px;
+}
+
 .mr5{
     margin-right: 5px;
+}
+
+.box .ibox{
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
+}
+
+/* .control-label {
+    display: block;
+} */
+
+.panel-title {
+    font-size: 20px;
+    margin-bottom: 15px;
+    font-weight: 700;
+    color: #1a1a1a;
+}
+
+.panel-description{
+    font-size: 15px;
 }
