--- a/medicine/public/css/customize.css
+++ b/medicine/public/css/customize.css
@@ -1,148 +1,59 @@
-.error-message{
-    color: red;
-    font-size: 12px;
-    margin-top: 5px;
-    font-style: italic;
-}
-
-input::placeholder{
-    font-size: 13px;
-}
-
-.mb20{
-    margin-bottom: 20px;
-}
-
-.mt20{
-    margin-top: 20px;
-}
-
-h5{
-    text-transform: uppercase;
-    font-weight: normal;
-}
-table .image{
-    height: 73px;
-    display: block;
-}
-.img-cover img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 100%;
-    box-shadow: 0 0 0 1px gray;
-}
-
-table strong{
-    min-width: 88px;
+.switch {
+    position: relative;
     display: inline-block;
-}
+    width: 60px;
+    height: 34px;
+  }
 
-.table > thead > tr > th,
-.table > tbody > tr > th,
-.table > tfoot > tr > th,
-.table > thead > tr > th,
-.table > tbody > tr > th,
-.table > tfoot > tr > th {
-    vertical-align: middle;
-}
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
 
-.uk-flex-space-between {
-    -ms-flex-pack: justify;
-    -webkit-justify-content: space-between;
-    justify-content: space-between;
-}
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
 
-.uk-flex-middle {
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-}
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
 
-.uk-flex {
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-}
+  input:checked + .slider {
+    background-color: #10d51a;
+  }
 
-.filter-wrapper{
-    margin-bottom: 20px;
-}
+  input:focus + .slider {
+    box-shadow: 0 0 1px #10d51a;
+  }
 
-.filter-wrapper .perpage{
-    display: inline-block;
-}
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
 
-.btn{
-    margin-bottom: 0 !important;
-    font-size: 13px;
-    border-radius: 0;
-    height: 32px;
-}
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
 
-.filter-wrapper .form-control{
-    height: 32px;
-    max-width: 200px;
-    font-size: 13px;
-}
-
-.mr10{
-    margin-right: 10px;
-}
-
-.mb15 {
-    margin-bottom: 15px;
-}
-
-.mr5{
-    margin-right: 5px;
-}
-
-.box .ibox{
-    box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
-}
-
-/* .control-label {
-    display: block;
-} */
-
-.panel-title {
-    font-size: 20px;
-    margin-bottom: 15px;
-    font-weight: 700;
-    color: #1a1a1a;
-}
-
-.panel-description{
-    font-size: 15px;
-}
-
-.select2-container--default .select2-selection--single{
-    border-radius:0 !important;
-}
-
-.select2-container .select2-selection--single{
-    height: 32px !important;
-    -webkit-transition: all .2s ease-out;
-    transition: all .2s ease-out;
-    -webkit-transition-property: color, -webkit-box-shadow; 
-    transition-property: color, -webkit-box-shadow; 
-    transition-property: box-shadow, color;
-    transition-property: box-shadow, color, -webkit-box-shadow;
-    -webkit-box-shadow: inset 0 1px 0 0 rgba(63, 63,68, .05);
-    box-shadow: inset 0 1px 0 0 rgba(63,63, 68, •05); 
-    border: 1px solid #c4cdd5;
-    outline: none;
-    background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#f9fafb));
-    background: Linear-gradient(to bottom,#fff,#f9fafb); 
-    border-color: #c4cdd5;
-}
-
-.select2-container--default .select2-selection--single .select2-selection__rendered{
-    line-height: 31px !important;
-    font-size: 13px;
-}
-
-.form-control{
-    height: 31px;
-}
+  .slider.round:before {
+    border-radius: 50%;
+  }
